# LitRadar-AI-Research-Assistant-for-Literature-Review

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
docs/: governance.md  product-proposal.md  system-design.md
docs/prompts/: prompts-critic.md  prompts-planner.md  prompts-renderer.md  prompts-synthesis.md
docs/specs/: memory.md  observability.md  orchestrator.md  retriever.md  serving.md  tools.md
evals/: eval_runner.py  expand_expected_papers.py  test_topics.json
src/: __init__.py  config.py  llm_client.py  logger.py  orchestrator.py  retriever.py  state.py  verifier.py
src/agents/: __init__.py  critic.py  planner.py  renderer.py  synthesis.py
src/search/: __init__.py  arxiv_client.py  openalex_client.py  sanitizer.py  semantic_scholar_client.py
