[project]
name = "litradar"
version = "0.1.0"
description = "AI Research Assistant for Literature Review"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.7.0",
    "chromadb>=0.5.0",
    "arxiv>=2.1.0",
    "httpx>=0.27.0",
    "streamlit>=1.40.0",
    "langfuse>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
